--- a/template/index.html
+++ b/template/index.html
@@ -7,11 +7,40 @@ and open the template in the editor.
 <html>
     <head>
         <meta charset="UTF-8">
-        <title></title>
+        <link rel="stylesheet" type="text/css" href="./public/css/reset.css">
+        <link rel="stylesheet" type="text/css" href="./public/css/style.css">
+        <link rel="stylesheet" type="text/css" href="./public/css/animate.css">
+        <script src="public/js/jquery.js"></script>
+        <script src="public/js/main.js"></script>
+        <title>HHCORP</title>
+
     </head>
     <body>
-        <?php
-        // put your code here
-        ?>
+        <div class="content">
+            <div class="block">
+                <div class="circle">
+                    <div class="circle-main">
+                        <img src="./public/images/icon.jpg" />
+                        <span>Electrical</span>
+                    </div>
+                </div>
+            </div>
+            <div class="block block_01">
+                <div class="circle">
+                    <div class="circle-main">
+                        <img src="./public/images/icon.jpg" />
+                        <span>Electrical</span>
+                    </div>
+                </div>
+            </div>
+            <div class="block block_02">
+                <div class="circle">
+                    <div class="circle-main">
+                        <img src="./public/images/icon.jpg" />
+                        <span>Electrical</span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
