--- a/template/index.html
+++ b/template/index.html
@@ -16,6 +16,10 @@ and open the template in the editor.
 
     </head>
     <body>
+        <div class="feedback">feedback</div>
+        <div class="set-color">
+            
+        </div>
         <div class="content">
             <div class="block">
                 <div class="circle">
@@ -40,6 +44,68 @@ and open the template in the editor.
                         <span>Electrical</span>
                     </div>
                 </div>
+            </div>
+            <div class="block block_03">
+                <div class="circle">
+                    <div class="circle-main">
+                        <img src="./public/images/icon.jpg" />
+                        <span>Electrical</span>
+                    </div>
+                </div>
+            </div>
+            <div class="block block_04">
+                <div class="circle">
+                    <div class="circle-main">
+                        <img src="./public/images/icon.jpg" />
+                        <span>Electrical</span>
+                    </div>
+                </div>
+            </div>
+            <div class="block block_05">
+                <div class="circle">
+                    <div class="circle-main">
+                        <img src="./public/images/icon.jpg" />
+                        <span>Electrical</span>
+                    </div>
+                </div>
+            </div>
+            <div class="block block_06">
+                <div class="circle">
+                    <div class="circle-main">
+                        <img src="./public/images/icon.jpg" />
+                        <span>Electrical</span>
+                    </div>
+                </div>
+            </div>
+            <div class="block block_07">
+                <div class="circle">
+                    <div class="circle-main">
+                        <img src="./public/images/icon.jpg" />
+                        <span>Electrical</span>
+                    </div>
+                </div>
+            </div>
+            <div class="block block_08">
+                <div class="circle">
+                    <div class="circle-main">
+                        <img src="./public/images/icon.jpg" />
+                        <span>Electrical</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="navi-bottom">
+            <div class="navi-left">
+                <ul>
+                    <a href="#"><li>About Us</li></a>
+                    <a href="#"><li>Sign In</li></a>
+                </ul>
+            </div>
+            <div class="navi-right">
+                <ul>
+                    <a href="#"><li>Terms & Conditions</li></a>
+                    <a href="#"><li>Privacy</li></a>
+                </ul>
             </div>
         </div>
     </body>
