--- a/template/index.html
+++ b/template/index.html
@@ -16,84 +16,73 @@ and open the template in the editor.
 
     </head>
     <body>
-        <div class="feedback">feedback</div>
+        
+        <div class="shadow">
+            <div class="popup">
+                <div class="main-popup">
+                    <div class="popup-header">
+                        <span>Send us your Feedback</span>
+                        <div class="close">X</div>
+                    </div>
+                    <div class="popup-content">
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <div class="feedback">
+            <div class="main-fe">
+                <span>F</span>
+                <span>e</span>
+                <span>e</span>
+                <span>d</span>
+                <span>b</span>
+                <span>a</span>
+                <span>c</span>
+                <span>k</span>
+            </div>
+        </div>
         <div class="set-color">
-            
+            <div class="posting">
+                <span>F</span>
+                <span>r</span>
+                <span>e</span>
+                <span>e</span>
+                <span></span>
+                <span>A</span>
+                <span>d</span>
+                <span></span>
+                <span>P</span>
+                <span>s</span>
+                <span>t</span>
+                <span>i</span>
+                <span>n</span>
+                <span>g</span>
+            </div>
+            <div class="color color-active-1"></div>
+            <div class="color color-active-2"></div>
+            <div class="color color-active-3"></div>
         </div>
-        <div class="content">
-            <div class="block">
-                <div class="circle">
-                    <div class="circle-main">
-                        <img src="./public/images/icon.jpg" />
-                        <span>Electrical</span>
-                    </div>
-                </div>
+        <div class="wallpaper">
+            <div class="arrow-left">
+                <img src="./public/images/muiten2.jpg" width="40px"/>
             </div>
-            <div class="block block_01">
-                <div class="circle">
-                    <div class="circle-main">
-                        <img src="./public/images/icon.jpg" />
-                        <span>Electrical</span>
-                    </div>
-                </div>
+            <div class="main-content">
+                <img src="./public/images/logo.jpg" />
+                <form action="" method="GET" >
+                    <input name="postcode" value="" type="text" placeholder="Postcode"/>
+                    <input name="search" value="" type="search" placeholder="Search" />
+                    <input type="submit" value="" name="submit" />
+                </form>
             </div>
-            <div class="block block_02">
-                <div class="circle">
-                    <div class="circle-main">
-                        <img src="./public/images/icon.jpg" />
-                        <span>Electrical</span>
-                    </div>
-                </div>
+            <div class="content">
+
             </div>
-            <div class="block block_03">
-                <div class="circle">
-                    <div class="circle-main">
-                        <img src="./public/images/icon.jpg" />
-                        <span>Electrical</span>
-                    </div>
-                </div>
+            <div class="arrow-right">
+                <img src="./public/images/muiten1.jpg" width="40px"/>
             </div>
-            <div class="block block_04">
-                <div class="circle">
-                    <div class="circle-main">
-                        <img src="./public/images/icon.jpg" />
-                        <span>Electrical</span>
-                    </div>
-                </div>
-            </div>
-            <div class="block block_05">
-                <div class="circle">
-                    <div class="circle-main">
-                        <img src="./public/images/icon.jpg" />
-                        <span>Electrical</span>
-                    </div>
-                </div>
-            </div>
-            <div class="block block_06">
-                <div class="circle">
-                    <div class="circle-main">
-                        <img src="./public/images/icon.jpg" />
-                        <span>Electrical</span>
-                    </div>
-                </div>
-            </div>
-            <div class="block block_07">
-                <div class="circle">
-                    <div class="circle-main">
-                        <img src="./public/images/icon.jpg" />
-                        <span>Electrical</span>
-                    </div>
-                </div>
-            </div>
-            <div class="block block_08">
-                <div class="circle">
-                    <div class="circle-main">
-                        <img src="./public/images/icon.jpg" />
-                        <span>Electrical</span>
-                    </div>
-                </div>
-            </div>
-        </div>
+        </div>    
         <div class="navi-bottom">
             <div class="navi-left">
                 <ul>
