--- a/template/index.html
+++ b/template/index.html
@@ -11,6 +11,7 @@ and open the template in the editor.
         <link rel="stylesheet" type="text/css" href="./public/css/style.css">
         <link rel="stylesheet" type="text/css" href="./public/css/animate.css">
         <script src="public/js/jquery.js"></script>
+        <script src="public/js/jQueryRotate.js"></script>
         <script src="public/js/main.js"></script>
         <title>HHCORP</title>
 
