--- a/template/public/css/style.css
+++ b/template/public/css/style.css
@@ -29,9 +29,9 @@ body{
     height: 600px;
     margin-top: 40px;
     border-radius: 50%;
-    border: 2px dotted  #a6ce39;
+    border: 2px dashed  #a6ce39;
     position: relative;
-    border-style: dotted dotted dotted;
+    border-style: dashed dashed dashed;
 
 }
 .block{
@@ -44,12 +44,12 @@ body{
 .circle{
     width: 100px;
     height: 100px;
-    border: 2px dotted  #a6ce39;
+    border: 2px dashed  #a6ce39;
     border-radius: 50%;
     display: block;
     cursor: pointer;
     margin: auto;
-
+    
 }
 .circle-main{
     background: #a6ce39;
@@ -313,4 +313,14 @@ body{
 }
 .popup-header .close:hover{
     color: #FFCC00;
+}
+.deg0{
+    transform: rotate(0deg);
+}
+.deg45{
+    transform: rotate(-45deg);
+}
+
+.circle{
+    transform: rotate(0deg);
 }
