--- a/template/index.html
+++ b/template/index.html
@@ -26,7 +26,22 @@ and open the template in the editor.
                         <div class="close">X</div>
                     </div>
                     <div class="popup-content">
-                        
+                        <div class="navi-popup">
+                            <div class="tab tab_active">General Inquiries</div>
+                            <div class="tab">Functionality Issue</div>
+                        </div>
+                        <div class="popup-form">
+                            <div class="popup-box-left">
+                                <div class="space"></div>
+                                <p>Your satisfaction is our success</p> 
+                                <p>Please share your experience with us</p> 
+                            </div>
+                            <div class="popup-box-right">
+                                <input type="email" name="email" value=""  placeholder="Email" />
+                                <input type="text" name="subject" value=""  placeholder="Subject" />
+                                <textarea name="message" placeholder="Message" ></textarea>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
