--- a/template/public/css/style.css
+++ b/template/public/css/style.css
@@ -49,7 +49,7 @@ body{
     display: block;
     cursor: pointer;
     margin: auto;
-    
+
 }
 .circle-main{
     background: #a6ce39;
@@ -105,8 +105,8 @@ body{
 }
 .block_08{
     float: left;
-    margin-top: -545px;
-    margin-left: 35px;
+    margin-top: -580px;
+    margin-left: 50px;
 }
 
 .navi-bottom{
@@ -323,4 +323,82 @@ body{
 
 .circle{
     transform: rotate(0deg);
+}
+.popup-content{
+    font-family: arial;
+}
+.navi-popup{
+    width: 245px;
+    margin: auto;
+    height: 90px;
+    text-align: center;
+}
+.tab{
+    padding: 10px;
+    width: 90px;
+    margin: auto;
+    float: left;
+    margin-left: 10px;
+    border-radius: 0px 0px 5px 5px;
+    border: 1px solid #FC0;
+    font-family: arial;
+    font-weight: bold;
+    color: #A6CE39;
+    cursor: pointer;
+    border-top: none;
+}
+.tab:hover, .tab_active{
+    background: #FC0;
+    color: #fff;
+}
+.popup-form{
+    width: 100%;
+    display: block;
+    height: 445px;
+    float: left;
+}
+.popup-box-left{
+    float: left;
+    width: 35%;
+    /*background: #A6CE38;*/
+    display: block;
+    height: 100%;
+}
+.popup-box-right{
+    float: left;
+    width: 60%;
+    /*background: #FC0;*/
+    display: block;
+    height: 100%;
+}
+.popup-box-right input{
+    border: 1px solid #FC0;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    padding-left: 5px;
+    width: 100%; 
+    height: 40px
+}
+.popup-box-right textarea{
+    border: 1px solid #FC0;
+    border-radius: 5px;
+    width: 100%; 
+    height: 200px
+}
+.popup-box-left{
+    text-align: center;
+}
+.popup-box-left p{
+    font-size: 16px;
+    color: #95979a;
+    display: block;
+    width: 134px;
+    margin: auto;
+    margin-bottom: 15px;
+    text-align: left;
+}
+.space{
+    display: block;
+    width: 100%;
+    height: 100px;
 }
