--- a/template/index.html
+++ b/template/index.html
@@ -17,7 +17,7 @@ and open the template in the editor.
 
     </head>
     <body>
-        
+
         <div class="shadow">
             <div class="popup">
                 <div class="main-popup">
@@ -37,16 +37,25 @@ and open the template in the editor.
                                 <p>Please share your experience with us</p> 
                             </div>
                             <div class="popup-box-right">
-                                <input type="email" name="email" value=""  placeholder="Email" />
-                                <input type="text" name="subject" value=""  placeholder="Subject" />
-                                <textarea name="message" placeholder="Message" ></textarea>
+                                <form action="" method="post" class="support" >
+                                    <input type="email" name="email" value=""  placeholder="Email" />
+                                    <input type="text" name="subject" value=""  placeholder="Subject" />
+                                    <textarea name="message" placeholder="Message" ></textarea>
+                                    <span>Please answer in the box</span>
+                                    <div class="box-num">2</div>
+                                    <span>+</span>
+                                    <div class="box-num">3</div>
+                                    <span>=</span>
+                                    <input type="number" name="num-asw" class="num-asw" value="" />
+                                    <input type="submit" name="submit" class="submit" value="SEND" />
+                                </form>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        
+
         <div class="feedback">
             <div class="main-fe">
                 <span>F</span>
@@ -64,12 +73,11 @@ and open the template in the editor.
                 <span>F</span>
                 <span>r</span>
                 <span>e</span>
-                <span>e</span>
-                <span></span>
+                <span class="space-span">e</span>
                 <span>A</span>
-                <span>d</span>
-                <span></span>
+                <span class="space-span">d</span>
                 <span>P</span>
+                <span>o</span>
                 <span>s</span>
                 <span>t</span>
                 <span>i</span>
