--- a/template/index.html
+++ b/template/index.html
@@ -103,6 +103,14 @@ and open the template in the editor.
             <div class="content">
 
             </div>
+            <div class="nav-circle">
+                <ul>
+                    <li class="active-navi"></li>
+                    <li class=""></li>
+                    <li class=""></li>
+                    <li class=""></li>
+                </ul>
+            </div>
             <div class="arrow-right">
                 <img src="./public/images/muiten1.jpg" width="40px"/>
             </div>
@@ -110,12 +118,15 @@ and open the template in the editor.
         <div class="navi-bottom">
             <div class="navi-left">
                 <ul>
-                    <a href="#"><li>About Us</li></a>
-                    <a href="#"><li>Sign In</li></a>
+                    <a href="#"><li><img src="./public/images/fb.jpg" /></li></a>
+                    <a href="#"><li><img src="./public/images/tw.jpg" /></li></a>
+                    <a href="#"><li><img src="./public/images/yt.jpg" /></li></a>
                 </ul>
             </div>
             <div class="navi-right">
                 <ul>
+                    <a href="#"><li>About Us</li></a>
+                    <a href="#"><li>Sign In</li></a>
                     <a href="#"><li>Terms & Conditions</li></a>
                     <a href="#"><li>Privacy</li></a>
                 </ul>
