--- a/template/public/css/style.css
+++ b/template/public/css/style.css
@@ -35,7 +35,9 @@ input:focus{
     border: 2px dashed  #a6ce39;
     position: relative;
     border-style: dashed dashed dashed;
-
+/*    -webkit-border-image: url("../images/border.jpg") 0 0 round ;  Safari 3.1-5 
+    -o-border-image: url("../images/border.jpg") 0 0 round;  Opera 11-12.1 
+    border-image: url("../images/border.jpg") 0 0 round;*/
 }
 .block{
     width: 115px;
@@ -137,7 +139,8 @@ input:focus{
     display: inline-block;
     text-decoration: none;
     list-style: none;
-    padding: 0px 40px;
+    padding: 0px 25px;
+    line-height: 55px;
 }
 .feedback{
     background: #ffcc00;
@@ -189,7 +192,7 @@ input:focus{
     text-align: center;
     cursor: pointer;
     float: right;
-    margin-top: -345px;
+    margin-top: -395px;
     margin-right: 120px;
 }
 .feedback:hover, .posting:hover{
@@ -235,13 +238,14 @@ input:focus{
     margin-left: 15px;
 }
 .main-content input[name=submit]{
-    height: 33px;
+    height: 37px;
     display: block;
     float: right;
     width: 33px;
     border: 1px solid #a6ce39;
-    background: url("../images/search.jpg");
+    background: #fff url("../images/search.jpg") no-repeat;
     background-size: 30px;
+    background-position: 0px 4px;
     position: absolute;
     right: 28px;
     top: 75px;
@@ -457,4 +461,29 @@ input:focus{
 }
 .space-span{
     margin-bottom: 5px;
+}
+
+.navi-left li{
+    padding: 0px 5px !important; 
+}
+.nav-circle{
+    width: 200px;
+    height: 20px;
+    margin: auto;
+    /*background: #ffcc00;*/
+    text-align: center;
+    margin-top: 30px;
+}
+.nav-circle ul li{
+    width: 10px;
+    height: 10px;
+    border: 1px solid #000;
+    border-radius: 50%;
+    text-align: center;
+    margin: auto;
+    display: inline-block;
+}
+.active-navi{
+    background: #A6CE38;
+    border: 1px solid #A6CE38 !important; 
 }
