--- a/template/index.html
+++ b/template/index.html
@@ -69,21 +69,23 @@ and open the template in the editor.
             </div>
         </div>
         <div class="set-color">
-            <div class="posting">
-                <span>F</span>
-                <span>r</span>
-                <span>e</span>
-                <span class="space-span">e</span>
-                <span>A</span>
-                <span class="space-span">d</span>
-                <span>P</span>
-                <span>o</span>
-                <span>s</span>
-                <span>t</span>
-                <span>i</span>
-                <span>n</span>
-                <span>g</span>
-            </div>
+            <a href="./freeadposting.html"> 
+                <div class="posting">
+                    <span>F</span>
+                    <span>r</span>
+                    <span>e</span>
+                    <span class="space-span">e</span>
+                    <span>A</span>
+                    <span class="space-span">d</span>
+                    <span>P</span>
+                    <span>o</span>
+                    <span>s</span>
+                    <span>t</span>
+                    <span>i</span>
+                    <span>n</span>
+                    <span>g</span>
+                </div> 
+            </a>
             <div class="color color-active-1"></div>
             <div class="color color-active-2"></div>
             <div class="color color-active-3"></div>
