--- a/template/public/css/style.css
+++ b/template/public/css/style.css
@@ -32,24 +32,26 @@ input:focus{
     height: 600px;
     margin-top: 40px;
     border-radius: 50%;
-    border: 2px dashed  #a6ce39;
+    border: 1px dashed  #a6ce39;
     position: relative;
     border-style: dashed dashed dashed;
-/*    -webkit-border-image: url("../images/border.jpg") 0 0 round ;  Safari 3.1-5 
-    -o-border-image: url("../images/border.jpg") 0 0 round;  Opera 11-12.1 
-    border-image: url("../images/border.jpg") 0 0 round;*/
+    /*    -webkit-border-image: url("../images/border.jpg") 0 0 round ;  Safari 3.1-5 
+        -o-border-image: url("../images/border.jpg") 0 0 round;  Opera 11-12.1 
+        border-image: url("../images/border.jpg") 0 0 round;*/
 }
 .block{
-    width: 115px;
+    width: 125px;
     height: 115px;
     margin: auto;
-    margin-top: -15px;
+    margin-top: -25px;
     background: #fff;
+    border-radius: 50%;
+    padding-top: 10px;
 }
 .circle{
     width: 100px;
     height: 100px;
-    border: 2px dashed  #a6ce39;
+    border: 1px dashed  #a6ce39;
     border-radius: 50%;
     display: block;
     cursor: pointer;
@@ -76,42 +78,38 @@ input:focus{
 }
 .block_01{
     float: right;
-    margin-top: -20px;
-    margin-right: 35px;
+    margin-top: -30px;
+    margin-right: 45px;
 }
+
 .block_02{
     float: right;
-    margin-top: 150px;
-    margin-right: -170px;
+    margin-top: 155px;
+    margin-right: -190px;
 }
 .block_03{
     float: right;
-    margin-top: 150px;
-    margin-right: -170px;
+    margin-top: 325px;
+    margin-right: -115px;
 }
 .block_04{
-    float: right;
-    margin-top: 335px;
-    margin-right: -95px;
+    display: block;
+    margin-top: 405px;
 }
 .block_05{
-    display: block;
-    margin-top: 415px;
+    float: left;
+    margin-top: -205px;
+    margin-left: 60px;
 }
 .block_06{
     float: left;
-    margin-top: -190px;
-    margin-left: 55px;
+    margin-top: -375px;
+    margin-left: -15px;
 }
 .block_07{
     float: left;
-    margin-top: -365px;
-    margin-left: -32px;
-}
-.block_08{
-    float: left;
-    margin-top: -580px;
-    margin-left: 50px;
+    margin-top: -550px;
+    margin-left: 35px;
 }
 
 .navi-bottom{
@@ -182,9 +180,9 @@ input:focus{
     width: 65px;
     text-align: center;
     position: absolute;
-    margin-top: 275px;
+    margin-top: 256px;
     cursor: pointer;
-    margin-left: 100px;
+    margin-left: 118px;
 }
 .arrow-right{
     display: block;
@@ -238,7 +236,7 @@ input:focus{
     margin-left: 15px;
 }
 .main-content input[name=submit]{
-    height: 37px;
+    height: 35px;
     display: block;
     float: right;
     width: 33px;
@@ -248,7 +246,7 @@ input:focus{
     background-position: 0px 4px;
     position: absolute;
     right: 28px;
-    top: 75px;
+    top: 74px;
     border-radius: 5px;
     cursor: pointer;
 }
@@ -332,10 +330,10 @@ input:focus{
     color: #FFCC00;
 }
 .deg0{
-    transform: rotate(45deg);
+    /*transform: rotate(45deg);*/
 }
 .deg45{
-    transform: rotate(-45deg);
+    /*transform: rotate(-45deg);*/
 }
 .deg00{
     transform: rotate(0deg);
