--- a/template/public/css/freeadposting.css
+++ b/template/public/css/freeadposting.css
@@ -60,6 +60,7 @@ body{
     float: left;
     border: 1px solid #A6CE38;
     margin-top: 30px;
+    margin-bottom: 50px;
 }
 .content img{
     width: 300px;
@@ -73,15 +74,16 @@ body{
 }
 .box-content{
     float: left;
-    width: 400px;
+    width: 465px;
     margin-left: 42px;
     /*background: #a6ce39;*/
     min-height: 100px;
     margin-top: 30px;
+    padding-bottom: 300px;
 }
 .box-right{
-    width: 470px;
-    margin-left: 20px;
+    width: 411px;
+    margin-left: 0px;
 }
 .input-left{
     width: 340px;
@@ -91,6 +93,7 @@ body{
     margin-bottom: 15px;
     font-size: 15px;
     float: left;
+    border-radius: 2px;
 }
 .char_aws{
     text-decoration: underline;
@@ -104,6 +107,9 @@ body{
 .input-order-1{
     width: 200px;
 }
+.input-order-2{
+    width: 400px;
+}
 .checkbox-info{
     float: left;
     width: 165px;
@@ -111,4 +117,145 @@ body{
     margin-top: 20px;
     margin-left: 10px;
     color: #96989A;
+}
+.upload-banner{
+    opacity: 0;
+    margin-top: 0px !important; 
+    display: block;
+    float: left !important; 
+    cursor: pointer;
+    position: absolute;
+    z-index: 1;
+}
+.check-banner{
+
+}
+.down-icon{
+    width: 40px;
+    height: 40px;
+    background: #A6CE38 url("../images/down.png") no-repeat center;
+    position: relative;
+    float: left;
+    margin-left: -40px;
+}
+.up-icon{
+    width: 40px;
+    height: 40px;
+    background: #A6CE38 url("../images/up.png") no-repeat center;
+    position: relative;
+    float: left;
+    margin-left: -215px;
+}
+.listting{
+    display: block;
+    float: left;
+}
+.listting .text{
+    color: #D2D3D5;
+    font-size: 25px;
+    line-height: 60px;
+}
+.input-radio {
+    float: left;
+    width: 15px;
+    height: 15px;
+    /* background: #A6CE39; */
+    margin-bottom: 10px;
+    display: block;
+    border-radius: 50%;
+    border: 1px solid #FE0;
+    cursor: pointer;
+}
+.listting span{
+    display: block;
+    margin-left: 30px;
+    line-height: 18px;
+    color: #A6CE38;
+}
+.box-little{
+    display: block;
+    float: left;
+}
+.business_description{
+    padding-left: 10px;
+    padding-top: 5px;
+    width: 400px;
+    height: 150px;
+    border: 1px solid #FFCC01;
+    font-size: 15px;
+    font-family: arial;
+    border-radius: 4px;
+}
+.box-little-2{
+    padding-left: 10px;
+    padding-top: 5px;
+    width: 400px;
+    height: 160px;
+    border: 1px solid #FFCC01;
+    font-size: 15px;
+    font-family: arial;
+    border-radius: 4px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.box-little-2 span{
+    color: #D2D3D5;
+    font-size: 22px;
+    line-height: 28px;
+    display: block;
+}
+.block-day{
+    width: 200px;
+    height: 30px;
+    /*background: #fe0;*/
+    float: left;
+    /*margin-bottom: 5px;*/
+}
+.block-day span{
+    font-size: 14px;
+    display: inline;
+    color: #A6CE38;
+}
+input[type="checkbox"]{
+    cursor: pointer;
+}
+.block-day input[type='text']{
+    width: 30px;
+}
+.week{
+    display: inline-block !important;
+    width: 70px;
+}
+.captcha{
+    float: left;
+    width: 80px;
+    height: 37px;
+    border: 1px solid #Fe0;
+    margin-left: 10px;
+}
+.refresh{
+    float: left;
+    width: 97px;
+    height: 37px;
+    background: #A6CE38;
+    margin-left: 10px;
+    color: #fff;
+    text-align: center;
+    cursor: pointer;
+    line-height: 35px;
+    font-size: 17px;
+}
+.submit-form{
+    text-align: center;
+    float: left;
+    width: 200px;
+    height: 37px;
+    background: #A6CE38;
+    cursor: pointer;
+    line-height: 35px;
+    font-size: 17px;
+    color: #fff;
+    margin-top: 20px;
+    border: none;
+    border-radius: 4px;
 }
