--- a/template/vongtron.html
+++ b/template/vongtron.html
@@ -2,65 +2,88 @@
 <div class="block">
     <div class="circle">
         <div class="circle-main">
-            <img src="./public/images/icon.jpg" />
+            <img src="./public/images/icon.png" />
             <span>Electrical</span>
+            <div class="hover-circle ch-info">
+                Search
+            </div>
         </div>
     </div>
 </div>
 <div class="block block_01">
     <div class="circle">
         <div class="circle-main">
-            <img src="./public/images/icon.jpg" />
+            <img src="./public/images/icon.png" />
             <span>Electrical</span>
+            <div class="hover-circle ch-info">
+                Search
+            </div>
         </div>
     </div>
 </div>
 <div class="block block_02">
     <div class="circle">
         <div class="circle-main">
-            <img src="./public/images/icon.jpg" />
+            <img src="./public/images/icon.png" />
             <span>Electrical</span>
+            <div class="hover-circle ch-info">
+                Search
+            </div>
         </div>
     </div>
 </div>
 <div class="block block_03">
     <div class="circle">
         <div class="circle-main">
-            <img src="./public/images/icon.jpg" />
+            <img src="./public/images/icon.png" />
             <span>Electrical</span>
+            <div class="hover-circle ch-info">
+                Search
+            </div>
         </div>
     </div>
 </div>
 <div class="block block_04">
     <div class="circle">
         <div class="circle-main">
-            <img src="./public/images/icon.jpg" />
+            <img src="./public/images/icon.png" />
             <span>Electrical</span>
+            <div class="hover-circle ch-info">
+                Search
+            </div>
         </div>
     </div>
 </div>
 <div class="block block_05">
     <div class="circle">
         <div class="circle-main">
-            <img src="./public/images/icon.jpg" />
+            <img src="./public/images/icon.png" />
             <span>Electrical</span>
+            <div class="hover-circle ch-info">
+                Search
+            </div>
         </div>
     </div>
 </div>
 <div class="block block_06">
     <div class="circle">
         <div class="circle-main">
-            <img src="./public/images/icon.jpg" />
+            <img src="./public/images/icon.png" />
             <span>Electrical</span>
+            <div class="hover-circle ch-info">
+                Search
+            </div>
         </div>
     </div>
 </div>
 <div class="block block_07">
     <div class="circle">
         <div class="circle-main">
-            <img src="./public/images/icon.jpg" />
+            <img src="./public/images/icon.png" />
             <span>Electrical</span>
+            <div class="hover-circle ch-info">
+                Search
+            </div>
         </div>
     </div>
 </div>
-
