--- a/template/public/css/animate.css
+++ b/template/public/css/animate.css
@@ -12,7 +12,18 @@ Copyright (c) 2014 Daniel Eden
   -webkit-animation-fill-mode: both;
           animation-fill-mode: both;
 }
-
+.animated_fast{
+    -webkit-animation-duration: 0.2s;
+          animation-duration: 0.2s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+}
+.animated_fasts{
+    -webkit-animation-duration: 0.1s;
+          animation-duration: 0.1s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+}
 .animated.infinite {
   -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
