--- a/template/public/css/style.css
+++ b/template/public/css/style.css
@@ -71,10 +71,14 @@ input:focus{
 .circle-main img{
     width: 35px;
     margin-top: 10px;
+    position: relative;
+    z-index: 0;
 }
 .circle span{
     color: #fff;
     font-weight: bold;
+    position: relative;
+    z-index: 0;
 }
 .block_01{
     float: right;
@@ -108,8 +112,8 @@ input:focus{
 }
 .block_07{
     float: left;
-    margin-top: -550px;
-    margin-left: 35px;
+    margin-top: -575px;
+    margin-left: 50px;
 }
 
 .navi-bottom{
@@ -402,6 +406,7 @@ input:focus{
     width: 100%; 
     height: 200px;
     margin-bottom: 10px;
+    font-family: arial;
 }
 .popup-box-left{
     text-align: center;
@@ -473,8 +478,8 @@ input:focus{
     margin-top: 30px;
 }
 .nav-circle ul li{
-    width: 10px;
-    height: 10px;
+    width: 7px;
+    height: 7px;
     border: 1px solid #000;
     border-radius: 50%;
     text-align: center;
@@ -484,4 +489,41 @@ input:focus{
 .active-navi{
     background: #A6CE38;
     border: 1px solid #A6CE38 !important; 
+}
+.hover-cricel{
+    background: #FC0;
+    
+}
+.ch-info {
+    /*position: absolute;*/
+    background: rgba(255, 204, 0, 0.65);
+    width: inherit;
+    height: inherit;
+    border-radius: 50%;
+    opacity: 0;
+    margin-top: -65px;
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    -ms-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    -o-transform: scale(0);
+    -ms-transform: scale(0);
+    transform: scale(0);
+    -webkit-backface-visibility: hidden;
+    text-align: center;
+    line-height: 85px;
+    font-size: 16px;
+    color: #fff;
+}
+
+.circle:hover .ch-info {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -o-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
 }
