--- a/template/freeadposting.html
+++ b/template/freeadposting.html
@@ -16,7 +16,7 @@ and open the template in the editor.
 
     </head>
     <body>
-        <div class="posting">
+<!--        <div class="posting">
             <span>F</span>
             <span>r</span>
             <span>e</span>
@@ -30,7 +30,7 @@ and open the template in the editor.
             <span>i</span>
             <span>n</span>
             <span>g</span>
-        </div>
+        </div>-->
         <div class="wallpaper">
             <div class="content animated zoomIn">
                 <a href="./"><img src="./public/images/logo.jpg"></a>
