--- a/template/vongtron.html
+++ b/template/vongtron.html
@@ -4,9 +4,11 @@
         <div class="circle-main">
             <img src="./public/images/icon.png" />
             <span>Electrical</span>
-            <div class="hover-circle ch-info">
-                Search
-            </div>
+            <a href="./product.html">
+                <div class="hover-circle ch-info">
+                    Search
+                </div>
+            </a>
         </div>
     </div>
 </div>
@@ -15,9 +17,11 @@
         <div class="circle-main">
             <img src="./public/images/icon.png" />
             <span>Electrical</span>
-            <div class="hover-circle ch-info">
-                Search
-            </div>
+            <a href="./product.html">
+                <div class="hover-circle ch-info">
+                    Search
+                </div>
+            </a>    
         </div>
     </div>
 </div>
@@ -26,9 +30,11 @@
         <div class="circle-main">
             <img src="./public/images/icon.png" />
             <span>Electrical</span>
-            <div class="hover-circle ch-info">
-                Search
-            </div>
+            <a href="./product.html">
+                <div class="hover-circle ch-info">
+                    Search
+                </div>
+            </a>
         </div>
     </div>
 </div>
@@ -37,9 +43,11 @@
         <div class="circle-main">
             <img src="./public/images/icon.png" />
             <span>Electrical</span>
-            <div class="hover-circle ch-info">
-                Search
-            </div>
+            <a href="./product.html">
+                <div class="hover-circle ch-info">
+                    Search
+                </div>
+            </a>
         </div>
     </div>
 </div>
@@ -48,9 +56,11 @@
         <div class="circle-main">
             <img src="./public/images/icon.png" />
             <span>Electrical</span>
-            <div class="hover-circle ch-info">
-                Search
-            </div>
+            <a href="./product.html">
+                <div class="hover-circle ch-info">
+                    Search
+                </div>
+            </a>
         </div>
     </div>
 </div>
@@ -59,9 +69,11 @@
         <div class="circle-main">
             <img src="./public/images/icon.png" />
             <span>Electrical</span>
-            <div class="hover-circle ch-info">
-                Search
-            </div>
+            <a href="./product.html">
+                <div class="hover-circle ch-info">
+                    Search
+                </div>
+            </a>
         </div>
     </div>
 </div>
@@ -70,9 +82,11 @@
         <div class="circle-main">
             <img src="./public/images/icon.png" />
             <span>Electrical</span>
-            <div class="hover-circle ch-info">
-                Search
-            </div>
+            <a href="./product.html">
+                <div class="hover-circle ch-info">
+                    Search
+                </div>
+            </a>
         </div>
     </div>
 </div>
@@ -81,9 +95,11 @@
         <div class="circle-main">
             <img src="./public/images/icon.png" />
             <span>Electrical</span>
-            <div class="hover-circle ch-info">
-                Search
-            </div>
+            <a href="./product.html">
+                <div class="hover-circle ch-info">
+                    Search
+                </div>
+            </a>
         </div>
     </div>
 </div>
