--- a/template/index.html
+++ b/template/index.html
@@ -46,7 +46,7 @@ and open the template in the editor.
                                     <span>+</span>
                                     <div class="box-num">3</div>
                                     <span>=</span>
-                                    <input type="number" name="num-asw" class="num-asw" value="" />
+                                    <input type="text" name="num-asw" class="num-asw" value="" />
                                     <input type="submit" name="submit" class="submit" value="SEND" />
                                 </form>
                             </div>
@@ -127,10 +127,10 @@ and open the template in the editor.
             </div>
             <div class="navi-right">
                 <ul>
-                    <a href="#"><li>About Us</li></a>
-                    <a href="#"><li>Sign In</li></a>
-                    <a href="#"><li>Terms & Conditions</li></a>
-                    <a href="#"><li>Privacy</li></a>
+                    <a href="./about-us.html"><li>About Us</li></a>
+                    <a href="./signin.html"><li>Sign In</li></a>
+                    <a href="./terms-conditions.html"><li>Terms & Conditions</li></a>
+                    <a href="./privacy.html"><li>Privacy</li></a>
                 </ul>
             </div>
         </div>
