--- a/template/public/css/style.css
+++ b/template/public/css/style.css
@@ -11,6 +11,7 @@ and open the template in the editor.
     font-family: Exotc350;
     src: url(../fonts/3562.ttf);
 }
+*{margin: 0; padding: 0}
 body{
     font-family: Exotc350;
     font-size: 14px;
@@ -112,8 +113,8 @@ input:focus{
 }
 .block_07{
     float: left;
-    margin-top: -575px;
-    margin-left: 50px;
+    margin-top: -560px;
+    margin-left: 35px;
 }
 
 .navi-bottom{
@@ -160,6 +161,11 @@ input:focus{
     padding-bottom: 10px;
     cursor: pointer;
     z-index: 100;
+    -webkit-transition: margin-left 0.3s ease-in-out ;
+    -moz-transition: margin-left 0.3s ease-in-out ;
+    -ms-transition: margin-left 0.3s ease-in-out ;
+    -o-transition: margin-left 0.3s ease-in-out ;
+    transition: margin-left 0.3s ease-in-out;
 }
 .set-color{
     background: #ffcc00;
@@ -231,26 +237,26 @@ input:focus{
     height: 30px;
     width: 80px;
     border: 1px solid #a6ce39;
-    text-align: center;
+    text-align: left;
+    padding-left: 5px;
 }
 .main-content input[name=search]{
-    width: 200px;
+    width: 179px;
     text-align: left;
-    height: 33px;
     margin-left: 15px;
 }
 .main-content input[name=submit]{
-    height: 35px;
+    height: 32px;
     display: block;
     float: right;
     width: 33px;
     border: 1px solid #a6ce39;
     background: #fff url("../images/search.jpg") no-repeat;
     background-size: 30px;
-    background-position: 0px 4px;
+    background-position: 0px 2px;
     position: absolute;
     right: 28px;
-    top: 74px;
+    top: 75px;
     border-radius: 5px;
     cursor: pointer;
 }
@@ -263,6 +269,12 @@ input:focus{
     margin-top: 195px;
     border-top: 4px solid #fff;
     border-bottom: 4px solid #fff;
+    -webkit-transition: all 0.3s ease-in-out ;
+    -moz-transition: all 0.3s ease-in-out ;
+    -ms-transition: all 0.3s ease-in-out ;
+    -o-transition: all 0.3s ease-in-out ;
+    transition: all 0.3s ease-in-out;
+    
 }
 .posting:hover{
     /*color: #FFCC00;*/
@@ -469,6 +481,9 @@ input:focus{
 .navi-left li{
     padding: 0px 5px !important; 
 }
+.navi-left li img{
+    width: 35px;
+}
 .nav-circle{
     width: 200px;
     height: 20px;
@@ -476,11 +491,13 @@ input:focus{
     /*background: #ffcc00;*/
     text-align: center;
     margin-top: 30px;
+    position: relative;
+    z-index: 1;
 }
 .nav-circle ul li{
     width: 7px;
     height: 7px;
-    border: 1px solid #000;
+    border: 1px solid #A6CE39;
     border-radius: 50%;
     text-align: center;
     margin: auto;
@@ -492,16 +509,16 @@ input:focus{
 }
 .hover-cricel{
     background: #FC0;
-    
+
 }
 .ch-info {
     /*position: absolute;*/
-    background: rgba(255, 204, 0, 0.65);
-    width: inherit;
-    height: inherit;
+    background: rgba(255, 204, 0, 0.86);
+    width: 103px;
+    height: 103px;
     border-radius: 50%;
     opacity: 0;
-    margin-top: -65px;
+    margin-top: -72px;
     -webkit-transition: all 0.2s ease-in-out;
     -moz-transition: all 0.2s ease-in-out;
     -o-transition: all 0.2s ease-in-out;
@@ -514,9 +531,10 @@ input:focus{
     transform: scale(0);
     -webkit-backface-visibility: hidden;
     text-align: center;
-    line-height: 85px;
-    font-size: 16px;
+    line-height: 100px;
+    font-size: 22px;
     color: #fff;
+    margin-left: -7px;
 }
 
 .circle:hover .ch-info {
@@ -526,4 +544,111 @@ input:focus{
     -ms-transform: scale(1);
     transform: scale(1);
     opacity: 1;
+}
+.content_sign{
+    margin: auto;
+    width: 450px;
+    height: 400px;
+    text-align: center;
+    font-family: arial;
+}
+.main-sign{
+    border: 1px solid #FC0;
+    padding-bottom: 45px;
+    border-radius: 5px;
+    float: left;
+}
+.header-box {
+    float: left;
+    width: 300px;
+    height: 60px;
+    display: block;
+    text-align: left;
+    padding-left: 40px;
+    padding-top: 40px;
+    color: #FC0;
+    font-family: arial;
+    font-weight: bold;
+    font-size: 30px;
+}
+input[type="password"], input[type="email"], input[name="fullname"] {
+    width: 355px;
+    height: 40px;
+    margin-bottom: 15px;
+    border: 1px solid #FE0;
+    font-size: 20px;
+    font-weight: 400;
+    padding-left: 10px;
+}
+.alert-box {
+    text-align: left;
+    margin-left: 45px;
+    color: red;
+    margin-top: -5px;
+    font-weight: bold;
+}
+.alert-box2 {
+    text-align: left;
+    margin-left: 71px;
+    color: #767676;
+    margin-top: -5px;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 30px;
+}
+input[name="login"] {
+    float: left;
+    margin-left: 40px;
+    border: none;
+    background: #A6CE3A;
+    padding: 10px 40px;
+    font-size: 16px;
+    color: #fff;
+    font-weight: bold;
+    border-radius: 3px;
+    margin-top: 10px;
+}
+a.bt-signup {
+    float: right;
+    margin-right: 40px;
+    background: #FC0;
+    padding: 10px 40px;
+    margin-top: 10px;
+    font-size: 16px;
+    font-weight: bold;
+    color: #fff;
+    border-radius: 3px;
+    margin-bottom: 40px;
+}
+a.forget-pass {
+    display: block;
+    width: 100%;
+    margin-top: 60px;
+    text-align: left;
+    margin-left: 40px;
+    text-decoration: underline;
+    color: #272626;
+    font-weight: bold;
+}
+input[name="sign-up"] {
+    width: 368px;
+    background: #FC0;
+    font-size: 24px;
+}
+input[name="checked"] {
+    float: left;
+    margin-left: 48px;
+    cursor: pointer;
+}
+.box-aler-sign{
+    float: left;
+    margin-top: 16px !important;
+}
+.forget-alert{
+    color: red !important;
+    text-align: right;
+    width: 140px !important;
+    float: right !important;
+    margin-top: 15px !important;
+    margin-right: 35px !important;
 }
